fix sln name typo

--- a/KubernetesSample/src/StockWeb/Dockerfile
+++ b/KubernetesSample/src/StockWeb/Dockerfile
@@ -2,7 +2,7 @@ FROM mcr.microsoft.com/dotnet/core/sdk:3.0 as build
 
 WORKDIR /src
 
-COPY ./Kubed.sln .
+COPY ./StockKube.sln .
 COPY ./src/StockData/StockData.csproj ./src/StockData/
 COPY ./src/StockWeb/StockWeb.csproj ./src/StockWeb/
 
