--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -25,7 +25,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push StockData
-      id: docker_build
+      id: docker_build_StockData
       uses: docker/build-push-action@v2
       with:
         context: ./KubernetesSample/src/StockData
@@ -35,7 +35,7 @@ jobs:
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
     - name: Build and push StockWeb
-      id: docker_build
+      id: docker_build_StockWeb
       uses: docker/build-push-action@v2
       with:
         context: ./KubernetesSample/src/StockWeb
