--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,7 +26,7 @@ jobs:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
     - name: Build and push ${{ matrix.apps }}
-      id: docker_build_${{ matrix.apps }}
+      id: docker_build
       uses: docker/build-push-action@v2
       with:
         context: ./KubernetesSample/src/${{ matrix.apps }}
