--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       matrix:
         dotnet-version: [ '5.0.x' ]
-        apps: ['StockData', 'StockWeb']
+        apps: ['stockdata', 'stockweb']
 
     steps:
     - name: Set up QEMU
