--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,6 +15,8 @@ jobs:
         apps: ['stockdata', 'stockweb']
 
     steps:
+    - name: Run a one-line script
+      run: ls -la .\KubernetesSample\src\${{ matrix.apps }}
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
