--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - name: Run a one-line script
-      run: ls -la .\KubernetesSample\src\${{ matrix.apps }}
+      run: ls -la ./KubernetesSample/src/${{ matrix.apps }}
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
@@ -30,8 +30,8 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: .\KubernetesSample\src\${{ matrix.apps }}
-        file: .\KubernetesSample\src\${{ matrix.apps }}\Dockerfile
+        context: ./KubernetesSample/src/${{ matrix.apps }}
+        file: ./KubernetesSample/src/${{ matrix.apps }}/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:1.0.0
     - name: Image digest
