--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - name: Run a one-line script
-      run: ls -la ./KubernetesSample
+      run: ls -la ./
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
