--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,8 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Run a one-line script
-      run: ls -la ./
+    - name: cd to apps root
+      run: cd KubernetesSample
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
     - name: Set up Docker Buildx
@@ -31,8 +31,8 @@ jobs:
       id: docker_build
       uses: docker/build-push-action@v2
       with:
-        context: ./KubernetesSample/src/${{ matrix.apps }}
-        file: ./KubernetesSample/src/${{ matrix.apps }}/Dockerfile
+        context: ./src/${{ matrix.apps }}
+        file: ./src/${{ matrix.apps }}/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:1.0.0
     - name: Image digest
