--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -44,6 +44,7 @@ jobs:
       matrix:
         apps: ['stockdata', 'stockweb']
 
+    steps:
     - uses: Azure/k8s-set-context@v1
       with:
         kubeconfig: ${{ secrets.KUBE_CONFIG }}
