--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -51,8 +51,8 @@ jobs:
       uses: Azure/k8s-deploy@v1.3
       with:
         manifests: |
-            kubernetes\namespace.yml
-            kubernetes\${{ matrix.apps }}.yml
+            .\kubernetes\namespace.yml
+            .\kubernetes\${{ matrix.apps }}.yml
         images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest
         kubectl-version: 'latest'
 
