add job requirement to run first

--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -37,7 +37,8 @@ jobs:
       run: echo ${{ steps.docker_build.outputs.digest }}
 
   Deploy:
-
+    needs: [build]
+    
     runs-on: ubuntu-latest
     strategy:
       matrix:
