--- a/.github/workflows/build.apps.yml
+++ b/.github/workflows/build.apps.yml
@@ -1,4 +1,4 @@
-name: grpc on k8s example
+name: grpc on k8s example - build
 
 on:
   push:
@@ -35,26 +35,5 @@ jobs:
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:$GITHUB_RUN_ID
     - name: Image digest
       run: echo ${{ steps.docker_build.outputs.digest }}
-
-  Deploy:
-    needs: [build]
-    
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        apps: ['stockdata', 'stockweb']
-
-    steps:
-    - uses: Azure/k8s-set-context@v1
-      with:
-        kubeconfig: ${{ secrets.KUBE_CONFIG }}
-    - name: deploy to aks
-      uses: Azure/k8s-deploy@v1.3
-      with:
-        manifests: |
-            .\kubernetes\namespace.yml
-            .\kubernetes\${{ matrix.apps }}.yml
-        images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest
-        kubectl-version: 'latest'
 
 
