--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -1,6 +1,14 @@
 name: grpc on k8s example - deploy
 
-on: workflow_dispatch
+on: 
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'     
+        required: true
+        default: 'warning'
+      tags:
+        description: 'Test scenario tags'  
 
 jobs:  
   Deploy:
