add repo checkout

--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -22,6 +22,7 @@ jobs:
         apps: ['stockdata', 'stockweb']
 
     steps:
+    - uses: actions/checkout@v2
     - uses: Azure/k8s-set-context@v1
       with:
         kubeconfig: ${{ secrets.KUBE_CONFIG }}
@@ -29,8 +30,8 @@ jobs:
       uses: Azure/k8s-deploy@v1.3
       with:
         manifests: |
-            .\kubernetes\namespace.yml
-            .\kubernetes\${{ matrix.apps }}.yml
+            kubernetes\namespace.yml
+            kubernetes\${{ matrix.apps }}.yml
         images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest
         kubectl-version: 'latest'
 
