--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -22,8 +22,8 @@ jobs:
       uses: Azure/k8s-deploy@v1.3
       with:
         manifests: |
-            kubernetes\namespace.yml
-            kubernetes\${{ matrix.apps }}.yml
+            ./kubernetes/namespace.yml
+            ./kubernetes/${{ matrix.apps }}.yml
         images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest
         kubectl-version: 'latest'
 
