--- a/kubernetes/stockdata.yml
+++ b/kubernetes/stockdata.yml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: stockdata
-        image: stockdata:1.0.0
+        image: gortemetiel/stockdata:latest
         resources:
           limits:
             cpu: 100m
