--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -15,12 +15,11 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: azure/k8s-set-context@v1
+    - uses: azure/aks-set-context@v1
       with:
-        method: service-account
-        k8s-url: https://aks-temp-dns-4e3bd399.hcp.westeurope.azmk8s.io:443
-        k8s-secret: ${{ secrets.KUBE_SECRET }}
-      id: setcontext
+        creds: '${{ secrets.AZURE_CREDENTIALS }}'
+        cluster-name: 'aks-temp'
+        resource-group: 'aks-temp'
     - name: deploy to aks
       uses: Azure/k8s-deploy@v1.3
       with:
