--- a/.github/workflows/build.apps.yml
+++ b/.github/workflows/build.apps.yml
@@ -1,8 +1,8 @@
-name: grpc on k8s example - build
+name: grpc_on_k8s_example_-_build
 
 on:
   push:
-    branches: [ master ]
+    branches: [ '*' ]
   pull_request:
     branches: [ master ]
 
