--- a/.github/workflows/build.apps.yml
+++ b/.github/workflows/build.apps.yml
@@ -23,8 +23,9 @@ jobs:
     - name: Login to DockerHub
       uses: docker/login-action@v1 
       with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.GHCR_WRITETOKEN }}
+        registry: ghcr.io
     - name: Build and push ${{ matrix.apps }}
       id: docker_build
       uses: docker/build-push-action@v2
@@ -33,10 +34,6 @@ jobs:
         file: ./src/${{ matrix.apps }}/Dockerfile
         push: true
         tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:1.0.2
-        username: ${{ github.actor }}
-        password: ${{ secrets.GHCR_WRITETOKEN }}
-        registry: docker.pkg.github.com
-        repository: ${{ github.repository }}/grpc-for-wcf-developers
         tag_with_sha: true
         tag_with_ref: true
 
