now with tags prefix

--- a/.github/workflows/build.apps.yml
+++ b/.github/workflows/build.apps.yml
@@ -33,6 +33,6 @@ jobs:
         context: ./.
         file: ./src/${{ matrix.apps }}/Dockerfile
         push: true
-        tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest, ${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:1.0.2
+        tags: ghcr.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:latest, ghcr.io/${{ secrets.DOCKERHUB_USERNAME }}/${{ matrix.apps }}:1.0.2
         tag_with_sha: true
         tag_with_ref: true
