now with correct username

--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -1,9 +1,9 @@
 name: grpc_on_k8s_example_-_deploy
 
 
-on: 
-  push:
-    branches: [ '*' ]
+on:
+  registry_package:
+    types: [published]
 
 jobs:  
   Deploy:
