add push trigger to test deployment

--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -4,6 +4,8 @@ name: grpc_on_k8s_example_-_deploy
 on:
   registry_package:
     types: [published]
+  push:
+    branches: [ '*' ]
 
 jobs:  
   Deploy:
