return trigger to only deploy on new container builds

--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -3,9 +3,8 @@ name: grpc_on_k8s_example_-_deploy
 
 on:
   registry_package:
-    types: [published]
-  push:
-    branches: [ '*' ]
+    types: 
+      - published
 
 jobs:  
   Deploy:
