add more triggers

--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -4,6 +4,9 @@ name: grpc_on_k8s_example_-_deploy
 on:
   registry_package:
     types: [published, updated]
+  workflow_dispatch:
+  workflow_run:
+    workflows: ["grpc_on_k8s_example_-_build"]
 
 jobs:  
   Deploy:
