--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -7,6 +7,8 @@ on:
   workflow_dispatch:
   workflow_run:
     workflows: ["grpc_on_k8s_example_-_build"]
+    types: 
+      - completed
 
 jobs:  
   Deploy:
