add namespace deployment

--- a/.github/workflows/deploy.apps.yml
+++ b/.github/workflows/deploy.apps.yml
@@ -24,7 +24,13 @@ jobs:
         creds: '${{ secrets.AZURE_CREDENTIALS }}'
         cluster-name: 'aks-temp'
         resource-group: 'aks-temp'
-    - name: deploy to aks
+    - name: deploy namespace to aks
+      uses: Azure/k8s-deploy@v1.3
+      with:
+        manifests: |
+            ./kubernetes/namespace.yml
+        kubectl-version: 'latest'
+    - name: deploy container to aks
       uses: Azure/k8s-deploy@v1.3
       with:
         namespace: 'stocks'
