--- a/.github/workflows/build.apps.yml
+++ b/.github/workflows/build.apps.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, Ubuntu-20.04]
     strategy:
       matrix:
         apps: ['stockdata', 'stockweb']
