--- a/kubernetes/stockweb.yml
+++ b/kubernetes/stockweb.yml
@@ -6,7 +6,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: stockweb
+      run: stockweb
   replicas: 1
   strategy:
     rollingUpdate:
@@ -16,7 +16,7 @@ spec:
   template:
     metadata:
       labels:
-        app: stockweb
+        run: stockweb
     spec:
       containers:
       - name: stockweb
